<resources>
    <string name="app_name">Nihongo no Seito</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_kanji">Tela Kanji</string>
    <string name="nav_quiz">Tela Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="nav_vocab">Tela Vocab</string>
    <string name="vocab_tela1">Comidas</string>
    <string name="vocab_tela2">Bebidas</string>
    <string name="vocab_tela3">Quiz</string>
    <!-- TODO - substituir o texto depois de adicionar a nova logo-->
    <string name="nav_header_desc">PlaceHolder do logo do app</string>
    <string-array name="listaVocab">
        <item>たべもの</item>
        <item>ごはん</item>
        <item>パン</item>
        <item>シリアル</item>
        <item>ジャム</item>
        <item>バター</item>
        <item>さかな</item>
        <item>えび</item>
        <item>かに</item>
        <item>にく</item>
        <item>ぎゅうにく</item>
        <item>とりにく</item>
        <item>たまご</item>
        <item>チーズ</item>
        <item>ヨーグルト</item>
    </string-array>
    <string-array name="listaVocabTraduz">
        <item>Comida</item>
        <item>Arroz</item>
        <item>Pão</item>
        <item>Cereal</item>
        <item>Geleia</item>
        <item>Manteiga</item>
        <item>Peixe</item>
        <item>Camarão</item>
        <item>Caranguejo</item>
        <item>Carne</item>
        <item>Carne de vaca</item>
        <item>Carne de frango</item>
        <item>Ovo</item>
        <item>Queijo</item>
        <item>Iogurte</item>
    </string-array>
    <!--Adicionar strings com os nomes das imagens(sem o .xml,jpg,png)-->
    <string-array name="vocabImgs">
        <item>camarao_img</item>
        <item>carne_img</item>
        <item>frango_img</item>
        <item>ovo_img</item>
        <item>camarao_img</item>
        <item>carne_img</item>
        <item>frango_img</item>
        <item>ovo_img</item>
        <item>camarao_img</item>
        <item>carne_img</item>
        <item>frango_img</item>
        <item>ovo_img</item>
        <item>camarao_img</item>
        <item>carne_img</item>
        <item>frango_img</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_seccond_screen">SeccondScreen</string>
    <string name="title_home">Home</string>
    <string name="title_kana">Kanas</string>
    <string name="title_kanji">Kanji</string>
    <string name="title_vocab">Vocabulário</string>
    <string name="title_vocab_menor">Vocab</string>
    <string name="title_perfil">Perfil</string>
</resources>
